--- a/C2B FBR Connect/C2B FBR Connect.csproj
+++ b/C2B FBR Connect/C2B FBR Connect.csproj
@@ -1,16 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net8.0-windows</TargetFramework>
+		<AssemblyName>C2B_Smart_App</AssemblyName>
+		<Product>C2B Smart App</Product>
+		<ApplicationTitle>C2B Smart App</ApplicationTitle>
 		<RootNamespace>C2B_FBR_Connect</RootNamespace>
 		<Nullable>enable</Nullable>
 		<UseWindowsForms>true</UseWindowsForms>
 		<ImplicitUsings>enable</ImplicitUsings>
+
+		<!-- Add these for better publishing -->
+		<RuntimeIdentifiers>win-x64;win-x86</RuntimeIdentifiers>
+		<UseWindowsForms>true</UseWindowsForms>
+		<ApplicationIcon />
+		<Win32Resource />
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <None Remove="assets\fbr_logo.png" />
+		<None Remove="assets\fbr_logo.png" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -26,9 +34,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Content Include="assets\fbr_logo.png">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Content>
+		<Content Include="assets\fbr_logo.png">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -40,5 +48,4 @@
 		<PackageReference Include="QRCoder" Version="1.6.0" />
 		<PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
 	</ItemGroup>
-
 </Project>
