--- a/C2B FBR Connect/C2B FBR Connect.csproj
+++ b/C2B FBR Connect/C2B FBR Connect.csproj
@@ -15,6 +15,8 @@
 		<UseWindowsForms>true</UseWindowsForms>
 		<ApplicationIcon />
 		<Win32Resource />
+		<PlatformTarget>AnyCPU</PlatformTarget>
+		<Platforms>AnyCPU;x86</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -30,6 +32,15 @@
 			<Lcid>0</Lcid>
 			<Isolated>false</Isolated>
 			<EmbedInteropTypes>true</EmbedInteropTypes>
+		</COMReference>
+		<COMReference Include="QBFC16Lib">
+		  <WrapperTool>tlbimp</WrapperTool>
+		  <VersionMinor>0</VersionMinor>
+		  <VersionMajor>1</VersionMajor>
+		  <Guid>1d05360b-2536-4277-83fd-bdf639e20f9e</Guid>
+		  <Lcid>0</Lcid>
+		  <Isolated>false</Isolated>
+		  <EmbedInteropTypes>true</EmbedInteropTypes>
 		</COMReference>
 	</ItemGroup>
 
