--- a/C2B FBR Connect/C2B FBR Connect.csproj
+++ b/C2B FBR Connect/C2B FBR Connect.csproj
@@ -23,6 +23,7 @@
 	<ItemGroup>
 		<None Remove="assets\favicon.ico" />
 		<None Remove="assets\fbr_logo.png" />
+		<None Remove="public_key_for_client.xml" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -44,6 +45,9 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
 		<Content Include="favicon.ico" />
+		<Content Include="public_key_for_client.xml">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -54,5 +58,6 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
 		<PackageReference Include="QRCoder" Version="1.6.0" />
 		<PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
+		<PackageReference Include="System.Management" Version="10.0.0" />
 	</ItemGroup>
 </Project>
